--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hamster5295.htools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
@@ -12,8 +15,14 @@
         android:theme="@style/Theme.HTools"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activities.DownloadActivity"
+            android:exported="false"
+            android:label="@string/download" />
+
+        <activity
             android:name=".activities.VideoGetActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/func_video" />
         <activity
             android:name=".activities.MusicGetActivity"
             android:exported="false"
@@ -39,10 +48,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.DownloadService"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
